tests/NormalTests/paczka1/fuzzy1/73127583.err
Error in line 3: J96af S116 96,1
Error in line 8: nonm8VNwk S434 49,4
Error in line 11: V0HWSarUbH S434 273,66
Error in line 14: GVWCHTzRnb S116 91,5
Error in line 1: V0HWSarUbH S434 86,3
Error in line 15: nonm8VNwk S155 138,9
Error in line 21: GVWCHTzRnb S434 4,7
Error in line 22: S434 S155 25,9
